relative lib paths

--- a/CloudDB/.classpath
+++ b/CloudDB/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.6.1.jar"/>
 	<classpathentry kind="lib" path="lib/oojava.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Marc/Coding/CloudDB/lib/InfiniteGraph.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Marc/Coding/CloudDB/lib/slf4j-simple-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/InfiniteGraph.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-simple-1.6.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
